# Ray-Tracing-Cornell-Box-C-Plus-Plus

./: README.md
Ray_Tracer/: CMakeLists.txt  ReadMe.txt
Ray_Tracer/app/: Image.cpp  Image.h  Triangle.h  main.cpp
Ray_Tracer/common/: FindOpenCV.cmake  OpenCV.cmake  config.cmake
